// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Tests should macth snapshot when password failed 1`] = `
<div
  className="row"
>
  <div
    className="ui-inputgroup col-8 offset-2"
  >
    <input
      className="form-control"
      id="password"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="login.password.en"
      style={
        Object {
          "borderColor": "red",
        }
      }
      type="password"
      value=""
    />
    <button
      className="ui-button-secondary"
      id="loginBtn"
      onClick={[Function]}
    >
      <i
        className="fa fa-sign-in"
      />
    </button>
  </div>
  <div
    className="ui-inputgroup col-8 offset-2"
  >
    <button
      className="btn btn-link pl-0"
      id="forgotPasswordBtn"
      onClick={[Function]}
      type="button"
    >
      login.forgotPassword.en
    </button>
  </div>
  <div
    className="row"
    style={
      Object {
        "marginTop": "2px",
      }
    }
  >
    <div
      className="col-8 offset-2"
    >
      <Message
        className={null}
        id="errorMsg"
        severity="error"
        style={null}
        text="login.wrongPassword.en"
      />
    </div>
  </div>
</div>
`;

exports[`Password Tests should match the snapshot 1`] = `
<div
  className="row"
>
  <div
    className="ui-inputgroup col-8 offset-2"
  >
    <input
      className="form-control"
      id="password"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="login.password.en"
      style={Object {}}
      type="password"
      value=""
    />
    <button
      className="ui-button-secondary"
      id="loginBtn"
      onClick={[Function]}
    >
      <i
        className="fa fa-sign-in"
      />
    </button>
  </div>
  <div
    className="ui-inputgroup col-8 offset-2"
  >
    <button
      className="btn btn-link pl-0"
      id="forgotPasswordBtn"
      onClick={[Function]}
      type="button"
    >
      login.forgotPassword.en
    </button>
  </div>
</div>
`;
